--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,10 +1,15 @@
-FROM node:lts-alpine
-ENV NODE_ENV=production
-WORKDIR /usr/src/app
-COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
-RUN npm install --production --silent && mv node_modules ../
+FROM node:lts-alpine as builder
+WORKDIR /app
+COPY package.json .
+COPY package-lock.json .
+RUN npm ci
 COPY . .
-EXPOSE 8080
-RUN chown -R node /usr/src/app
-USER node
-CMD ["npm", "start"]
+RUN npm run build
+
+
+FROM nginx:1.23.3-alpine
+ENV NODE_ENV production
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+
